[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "technical-index"
version = "0.1.0"
description = "A Python project for technical index calculations"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "AshinGau", email = "helloxiyue@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.32",
    "binance-futures-connector>=4.1",
    "numpy<=1.26.4",
    "pandas>=2.2",
    "pandas-ta==0.3.14b0",
    "mplfinance>=0.12.10b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.900",
    "black[jupyter]>=25.1.0",
]

[project.scripts]
technical-index = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["technical_index*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
